# geodataset

./: .buildinfo  .gitattributes  .gitignore  LICENSE.md  README.md  aggregator.html  aoi.html  dataset.html  documentation.html  examples.html  genindex.html  geodata.html  index.html  labels.html  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_sphinx_only.txt  search.html  searchindex.js  setup.cfg  setup.py  tilerize.html  utils.html
.github/workflows/: deploy-sphinx-docs.yml
_modules/: index.html
_modules/geodataset/aggregator/: aggregator.html
_modules/geodataset/aoi/: aoi_config.html
_modules/geodataset/dataset/: base_dataset.html  raster_dataset.html
_sources/: examples.rst.txt
_static/css/: custom.css
doc/source/: aggregator.rst  aoi_config.rst  api_documentation.rst  conf.py  geodata.rst  index.rst  labels.rst  raster.rst  raster_tilerizer.rst  tilerize.rst
docs/: Makefile  make.bat
docs/source/: aggregator.rst  aoi.rst  dataset.rst  documentation.rst  examples.rst  geodata.rst  tilerize.rst  utils.rst
geodataset/: __init__.py  _version.py
geodataset/aggregator/: __init__.py  aggregator.py
geodataset/aoi/: __init__.py  aoi_base.py  aoi_config.py  aoi_disambiguator.py  aoi_from_package.py  aoi_generator.py
geodataset/dataset/: __init__.py  base_dataset.py  boxes_dataset.py  coco_generator.py  dataset.py  detection_dataset.py  multimodal_dataset.py  point_dataset.py  polygon_dataset.py  raster_dataset.py
geodataset/geodata/: __init__.py  base_geodata.py  geodata.py  label.py  point_cloud.py  point_cloud_tile.py  raster.py  raster_tile.py  tile.py
geodataset/labels/: __init__.py  base_labels.py  detection_labels.py  raster_labels.py
geodataset/metadata/: __init__.py  tile_metadata.py
geodataset/tilerize/: __init__.py  arthur_tilerizer.py  base_tilerizer.py  labeled_point_cloud_tilerizer.py  labeled_raster_tilerizer.py  object_tilerizer.py  point_cloud_polygon_tilerizer.py  point_cloud_tilerizer.py  polygon_tilerizer.py  raster_polygon_tilerizer.py  raster_tilerizer.py  tilerizer.py
geodataset/utils/: __init__.py  datasets_parsers.py  download_arcgis_online_labels.py  file_name_conventions.py  geometry.py  io.py  point_cloud_utils.py  utils.py  visualize.py
source/: examples.rst  index.rst
tilerize/: tilerizer.py
(+62 files in other folders)
