[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geodataset"
dynamic = ["version"]
description = "This package provides essential tools for cutting raster and their labels into smaller tiles, useful for machine learning tasks. Also provides datasets compatible with PyTorch."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Hugo Baudchon", email = "hugo.baudchon@umontreal.ca"}
]
keywords = ["geospatial", "machine learning", "raster", "pytorch", "datasets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "albumentations>=1.4.0",
    "einops>=0.7.0",
    "geopandas>=0.13.2",
    "matplotlib>=3.8.2",
    "numpy>=1.25.2",
    "opencv-python>=4.9.0",
    "pandas>=2.2.0",
    "Pillow>=10.3.0",
    "pyarrow>=15.0.1",
    "pycocotools>=2.0.7",
    "rasterio>=1.3.7,<=1.4.2",
    "shapely>=2.0.1",
    "tqdm>=4.66.3",
    "xmltodict>=0.13.0",
]

[project.optional-dependencies]
pc = [
    "laspy>=2.5.3",
    "lazrs>=0.5.2",
    "open3d>=0.18.0,<0.20.0",
]
dev = [
    "build",
    "twine",
    "Sphinx==7.4.4",
    "sphinx-autodoc-typehints==2.2.3",
    "sphinx-rtd-theme==2.0.0",
]

[project.urls]
Homepage = "https://github.com/hugobaudchon/geodataset"
Repository = "https://github.com/hugobaudchon/geodataset"
Documentation = "https://hugobaudchon.github.io/geodataset/"

[tool.setuptools]
packages = ["geodataset"]

[tool.setuptools.package-data]
"*" = ["utils/categories/*/*.json", "utils/aois/*/*.geojson", "utils/aois/*/*.gpkg"]

[tool.setuptools.dynamic]
version = {attr = "geodataset._version.__version__"}

[tool.setuptools_scm]
write_to = "geodataset/_version.py"
